Fix the fetch feed api to use optional slug ID as anchor
